Zain Khoja's Personal Website & Portfolio

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
                 <p>I’m Zain, a student (on the right) at the <a href="http://tams.unt.edu" target="_blank" style="color: #007a33">Texas Academy of Math and Science</a> studying to be a product designer. I once wanted to be a programmer, but  decided that I preferred not coding.</p>
 
-                <p>I entered design when I went to a hacakthon and liked the free stuff, but not the code. Instead, I kept thinking of ideas and new ways to improve the lives of people around me.</p>
+                <p>I entered design when I went to a hackathon and liked the free stuff, but not the code. Instead, I kept thinking of ideas and new ways to improve the lives of people around me.</p>
 
                 <p>I’ve previously worked with the UNT College of Engineering to create an accessible auditory display to enhance programming for visually impaired users.</p>
 
