Zain Khoja's Personal Website & Portfolio

--- a/index.html
+++ b/index.html
@@ -52,23 +52,23 @@
     <body>
         <div class="content">
             <!-- Research -->
-            <div class="work">
-                <a href="http://xrezlab.com" target="_blank"><div id="research"></div></a>
+            <a href="http://xrezlab.com" target="_blank"><div class="work">
+                <div id="research"></div>
                 <h3>Research</h3>
                 <h4>Studying presence in virtual reality at the University of North Texas.</h4>
-            </div>
+            </div></a>
             <!-- Design -->
-            <div class="work">
-                <a href="design.html"><div id="design"></div></a>
+            <a href="design.html"><div class="work">
+                <div id="design"></div>
                 <h3>Design</h3>
                 <h4>A collection of illustrations I've created for clients and personal use.</h4>
-            </div>
+            </div></a>
             <!-- Travel -->
-            <div class="work">
-                <a href="travel.html"><div id="travel"></div></a>
+            <a href="travel.html"><div class="work">
+                <div id="travel"></div>
                 <h3>Travel</h3>
                 <h4>My favorite photos from my favorite places around the world.</h4>
-            </div>
+            </div></a>
         </div>
     </body>
 </html>
