--- a/about.html
+++ b/about.html
@@ -54,18 +54,17 @@
             <div class="c6" id="bio">
                 <p>Hey there!</p>
 
-                <p>I’m Zain, a student (on the right) at the <a href="http://tams.unt.edu" target="_blank" style="color: #007a33">Texas Academy of Math and Science</a> studying to be a product designer. I once wanted to be a programmer, but  decided that I preferred not coding.</p>
+                <p>I’m Zain, a student (on the right) at the <a href="http://tams.unt.edu" target="_blank" style="color: #007a33">Texas Academy of Math and Science</a> studying to be a product designer. I once wanted to be a programmer, but decided that I was more fascinated with pictures than text.</p>
 
-                <p>I entered design when I went to a hackathon and liked the free stuff, but not the code. Instead, I kept thinking of ideas and new ways to improve the lives of people around me.</p>
+                <p>I entered design when I went to a hackathon and connecting people to ideas instead of being engrossed in the medium of technology. I kept thinking of ideas and new ways to improve the lives of people around me.</p>
 
-                <p>I’ve previously worked with the UNT College of Engineering to create an accessible auditory display to enhance programming for visually impaired users.</p>
+                <p>I've previously engaged in research at the University of North Texas (UNT) specifically in usability testing labs. Along with a team of dedicated students, I developed an accessible auditory display to enhance programming for visually impaired users.</p>
 
                 <p>I currently work with the <a href="http://xrezlab.com" target="_blank" style="color: #D75C49">xREZ Art + Science Lab</a> at the University of North Texas, studying virtual presence. I'm also lucky to get the opportunity to visit many different places and write about my experiences on <a href="http://medium.com/@zainkho" style="color: #28E175">Medium</a>.</p>
                 
+                <p>If you'd like to get to know me better, feel free to connect with me on <a href="http://twitter.com/@zainkho" target="_blank" style="color: #55ACEE">Twitter</a> or <a href="http://www.linkedin.com/in/zainkho" target="_blank" style="color: #0077b5">LinkedIn</a>.</p> 
+                    
                 <p>Let me know if you’d like to <a href="http://m.me/zainkho7" target="_blank" style="border-bottom: 1px dotted">talk</a> or <a href="mailto: zainkhoja7@gmail.com?subject=Yo" style="border-bottom: 1px dotted">work</a> with me!</p>
-
-                <br>
-                <p>Also, I’m pretty funny on <a href="http://twitter.com/@zainkho" target="_blank" style="color: #55ACEE">Twitter</a>.</p>
 
             </div>
             <div class="c6">
