fixed responsive issues on larger screens

--- a/index.html
+++ b/index.html
@@ -52,23 +52,25 @@
     <body>
         <div class="content">
             <!-- Research -->
-            <a href="http://xrezlab.com" target="_blank"><div class="work">
+            <div class="row">
+            <div class="c4"><a href="http://xrezlab.com" target="_blank"><div class="work">
                 <div id="research"></div>
                 <h3>Research</h3>
                 <h4>Studying presence in virtual reality at the University of North Texas.</h4>
-            </div></a>
+            </div></a></div>
             <!-- Design -->
-            <a href="design.html"><div class="work">
+            <div class="c4"><a href="design.html"><div class="work">
                 <div id="design"></div>
                 <h3>Design</h3>
                 <h4>A collection of illustrations I've created for clients and personal use.</h4>
-            </div></a>
+            </div></a></div>
             <!-- Travel -->
-            <a href="travel.html"><div class="work">
+            <div class="c4"><a href="travel.html"><div class="work">
                 <div id="travel"></div>
                 <h3>Travel</h3>
                 <h4>My favorite photos from my favorite places around the world.</h4>
-            </div></a>
+            </div></a></div>
+            </div>
         </div>
     </body>
 </html>
