--- a/travel.html
+++ b/travel.html
@@ -77,7 +77,7 @@
 
     <body>
         <div class="content">
-            <p>I love to travel and just thought I'd share a tiny part of the wonderful experiences I've been fortunate enough to have. Photos are all taken on iPhone 5s and 6 without any additional filters, lenses, or mods. Read about my travels on <a href="http://medium.com/@zainkho" target="_blank" style="color: #28E175">Medium</a>.</p>
+            <p>I love to travel and just thought I'd share a tiny part of the wonderful experiences I've been fortunate enough to have. Photos are all taken on iPhone 5s, 6, and X (more recently) without any additional filters, lenses, or mods. Read about my travels on <a href="http://medium.com/@zainkho" target="_blank" style="color: #28E175">Medium</a>.</p>
             <br>
 
             <div class="row">
