--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
             <p>I've previously engaged in research at the University of North Texas (UNT) in various usability testing labs. Along with a team of dedicated students, I developed an accessible auditory display to enhance programming for visually impaired users.</p>
 
-            <p>I currently work with the <a href="http://xrezlab.com" target="_blank" style="color: #D75C49">xREZ Art + Science Lab</a> at the University of North Texas, studying virtual presence. I'm also lucky to get the opportunity to visit many different places and write about my experiences on <a href="http://medium.com/@zainkho" style="color: #28E175">Medium</a></p>
+            <p>I currently work with the <a href="http://xrezlab.com" target="_blank" style="color: #D75C49">xREZ Art + Science Lab</a> at the University of North Texas, studying virtual presence. I'm also lucky to get the opportunity to visit many different places and write about my experiences on <a href="http://medium.com/@zainkho" style="color: #28E175">Medium</a>.</p>
 
             <p>If you'd like to get in touch with me, feel free to reach out via <a href="http://twitter.com/@zainkho" target="_blank" style="color: #55ACEE">Twitter</a> or <a href="http://www.linkedin.com/in/zainkho" target="_blank" style="color: #0077b5">LinkedIn</a>.
             </p>
