--- a/designs.html
+++ b/designs.html
@@ -73,7 +73,7 @@
   </header>
 
     <body>
-        <div class="content summary">        
+        <div class="content">        
             <div class="row">
                 <div class="c1"></div>
                 <div class="c5">
