--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="index.html"><img src="zklogo.png" class="zklogo"/></a>
             <div id="title">
                 <h1>Zain Khoja</h1>
-                <h2 id="blurb">Student at <a href="http://tams.unt.edu" target="_blank" style="color: #007a33">TAMS</a>. Aspiring product designer.</h2>
+                <h2 id="blurb">Student at <a href="https://www.cornell.edu/" target="_blank" style="color: #B31B1B">Cornell</a>. Aspiring product designer.</h2>
             </div>
             <div class="optionList" style="float: right">
                 <h2 class="option" style="opacity: 1">work</h2>
