--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
     <!-- Webpage Icons -->
     <link rel="icon" type="image/x-icon" href="zklogo.ico"/>
     <link rel="icon" type="image/png" href="zklogo.png"/>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89012104-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-89012104-2');
+    </script>
+
 </head>
 
 <!-- WEBPAGE -->
