--- a/about.html
+++ b/about.html
@@ -61,18 +61,15 @@
           
             <p>What's up!</p>
 
-            <p>I’m Zain, a student at the <a href="http://tams.unt.edu" target="_blank" style="color: #007a33">Texas Academy of Math and Science</a> studying to be a product designer. I once wanted to be a programmer, but decided that I was more fascinated with pictures than text.</p>
+            <p>I’m Zain, a student at <a href="https://www.cornell.edu/" target="_blank" style="color: #B31B1B">Cornell University</a> studying Information Science.</p>
 
-            <p>I entered design when I went to a hackathon and enjoyed connecting people to ideas instead of being engrossed in the medium of technology. I kept thinking of ideas and new ways to improve the lives of people around me.</p>
+            <p>I entered design when I went to a hackathon and enjoyed connecting people to ideas through the medium of user experiences and products. I'm always thinking of ideas and new ways to improve the lives of people around me, whether they include technology or not.</p>
 
-            <p>I've previously engaged in research at the University of North Texas (UNT) in various usability testing labs. Along with a team of dedicated students, I developed an accessible auditory display to enhance programming for visually impaired users.</p>
+            <p>I've previously engaged in research at the University of North Texas (UNT) in various usability testing labs. Along with a team of dedicated students, I developed an accessible auditory display to enhance programming for visually impaired users. I also worked with the <a href="http://xrezlab.com" target="_blank" style="color: #D75C49">xREZ Art + Science Lab</a> at the University of North Texas, where I studied virtual presence.</p>
+                
+            <p>I look for new experiences and lifestyles everywehre I go, so be sure to catch a few of my write-ups on <a href="http://medium.com/@zainkho" style="color: #28E175">Medium</a>.</p>
 
-            <p>I currently work with the <a href="http://xrezlab.com" target="_blank" style="color: #D75C49">xREZ Art + Science Lab</a> at the University of North Texas, studying virtual presence. I'm also lucky to get the opportunity to visit many different places and write about my experiences on <a href="http://medium.com/@zainkho" style="color: #28E175">Medium</a>.</p>
-
-            <p>If you'd like to get in touch with me, feel free to reach out via <a href="http://twitter.com/@zainkho" target="_blank" style="color: #55ACEE">Twitter</a> or <a href="http://www.linkedin.com/in/zainkho" target="_blank" style="color: #0077b5">LinkedIn</a>.
-            </p>
-
-            <p>Let me know if you’d like to <a href="http://m.me/zainkho7" target="_blank" style="border-bottom: 1px dotted">talk</a> or <a href="mailto: zainkhoja7@gmail.com?subject=Yo" style="border-bottom: 1px dotted">work</a> with me!</p>
+            <p>If you'd like to get in touch with me, feel free to reach out via <a href="http://twitter.com/@zainkho" target="_blank" style="color: #55ACEE">Twitter</a> or <a href="http://www.linkedin.com/in/zainkho" target="_blank" style="color: #0077b5">LinkedIn</a>. Let me know if you’d like to <a href="http://m.me/zainkho7" target="_blank" style="border-bottom: 1px dotted">talk</a> or <a href="mailto: zainkhoja7@gmail.com?subject=Yo" style="border-bottom: 1px dotted">work</a> with me!</p>
         </div>
         <div class="c1"></div>
         <div class="c4">
