--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 
             <p>I've previously engaged in research at the University of North Texas (UNT) in various usability testing labs. Along with a team of dedicated students, I developed an accessible auditory display to enhance programming for visually impaired users. I also worked with the <a href="http://xrezlab.com" target="_blank" style="color: #D75C49">xREZ Art + Science Lab</a> at the University of North Texas, where I studied virtual presence.</p>
                 
-            <p>I look for new experiences and lifestyles everywehre I go, so be sure to catch a few of my write-ups on <a href="http://medium.com/@zainkho" style="color: #28E175">Medium</a>.</p>
+            <p>I look for new experiences and lifestyles everywhere I go, so be sure to catch a few of my write-ups on <a href="http://medium.com/@zainkho" style="color: #28E175">Medium</a>.</p>
 
             <p>If you'd like to get in touch with me, feel free to reach out via <a href="http://twitter.com/@zainkho" target="_blank" style="color: #55ACEE">Twitter</a> or <a href="http://www.linkedin.com/in/zainkho" target="_blank" style="color: #0077b5">LinkedIn</a>. Let me know if you’d like to <a href="http://m.me/zainkho7" target="_blank" style="border-bottom: 1px dotted">talk</a> or <a href="mailto: zainkhoja7@gmail.com?subject=Yo" style="border-bottom: 1px dotted">work</a> with me!</p>
         </div>
