--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                 
             <p>I look for new experiences and lifestyles everywhere I go, so be sure to catch a few of my write-ups on <a href="http://medium.com/@zainkho" style="color: #28E175">Medium</a>.</p>
 
-            <p>If you'd like to get in touch with me, feel free to reach out via <a href="http://twitter.com/@zainkho" target="_blank" style="color: #55ACEE">Twitter</a> or <a href="http://www.linkedin.com/in/zainkho" target="_blank" style="color: #0077b5">LinkedIn</a>. Let me know if you’d like to <a href="http://m.me/zainkho7" target="_blank" style="border-bottom: 1px dotted">talk</a> or <a href="mailto: zainkhoja7@gmail.com?subject=Yo" style="border-bottom: 1px dotted">work</a> with me!</p>
+            <p>Let me know if you’d like to <a href="http://m.me/zainkho7" target="_blank" style="border-bottom: 1px dotted">talk</a> or <a href="mailto: zainkhoja7@gmail.com?subject=Yo" style="border-bottom: 1px dotted">work</a> with me!</p>
         </div>
         <div class="c1"></div>
         <div class="c4">
