--- a/nalp.html
+++ b/nalp.html
@@ -84,7 +84,7 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c10">
-            <h1 class="nalptitle">
+            <h1 class="nalptitle title">
                 NALP.<br>
                 An Intro to Comm Design.
             </h1>
