--- a/respond.html
+++ b/respond.html
@@ -84,7 +84,7 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c10">
-            <h1 class="respondtitle">
+            <h1 class="respondtitle title">
                 Respond.<br>
                 HackMIT 2018.
             </h1>
