--- a/travel.html
+++ b/travel.html
@@ -84,7 +84,7 @@
     <div class="row" id="travel">
         <div class="c1"></div>
         <div class="c10">
-            <h1 class="venicetitle">
+            <h1 class="venicetitle title">
                 Travel.<br>
                 Cool shots of cool places.
             </h1>
