--- a/campmosaic.html
+++ b/campmosaic.html
@@ -84,7 +84,7 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c10">
-            <h1 class="campmosaictitle">
+            <h1 class="campmosaictitle title">
                 Camp Mosaic.<br>
                 Design system for youth.
             </h1>
