--- a/chirp.html
+++ b/chirp.html
@@ -84,7 +84,7 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c10">
-            <h1 class="chirptitle">
+            <h1 class="chirptitle title">
                 Chirp.<br>
                 HackUTD 2017.
             </h1>
