--- a/designs.html
+++ b/designs.html
@@ -84,7 +84,7 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c10">
-            <h1 class="designstitle">
+            <h1 class="designstitle title">
                 Designs.<br>
                 Drawings and illustration.
             </h1>
