--- a/earbud.html
+++ b/earbud.html
@@ -84,7 +84,7 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c10">
-            <h1 class="earbudtitle">
+            <h1 class="earbudtitle title">
                 EarBud.<br>
                 Accessibility research.
             </h1>
