--- a/tint.html
+++ b/tint.html
@@ -84,7 +84,7 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c10">
-            <h1 class="tinttitle">
+            <h1 class="tinttitle title">
                 Tint.<br>
                 Photo app concept.
             </h1>
