Added title property to work and about pages

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c10">
-            <h1>
+            <h1 class="title">
                 Hey, I'm Zain.<br>
                 It's nice to meet you.
             </h1>
