--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c10">
-            <h1>
+            <h1 class="title">
                 Student at <a href="https://www.cornell.edu/" target="_blank" style="color: #B31B1B">Cornell</a>.<br>
                 Aspiring Product Designer.
             </h1>
