Fixed serious issues with wording of content

--- a/chirp.html
+++ b/chirp.html
@@ -131,7 +131,7 @@
             
             <h1 class="chirptitle">Research</h1>
             <p>
-                While research is an impressive and rewarding extracurricular for students, it’s commonly seen as too complex or unapproachable for those not yet in a university. Contrastingly, social media proves to be the most attractive medium for teenage entertainment. Second? Music. Combining these two attractions results in a unique product that has interesting effects on teenage audiences.
+                While research is an impressive and rewarding extracurricular for students, it’s commonly seen as too complex or unapproachable for those not yet in a university. On another note, social media proves to be the most attractive medium for teenage entertainment. Second? Music. Combining these two attractions results in a unique product that has interesting effects on teenage audiences.
             </p><br>
             
             <h1 class="chirptitle">Ideation</h1>
