--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="optionList" style="float: right">
                 <h3 class="option selected">work</h3>
                 <h3 class="option"><a href="about.html">about</a></h3>
-                <h3 class="option"><a target="_blank" href="zainkhoresume.pdf">resume</a></h3>
+                <h3 class="option"><a target="_blank" href="zainkho_resume.pdf">resume</a></h3>
             </div>    
         </div>
         <div class="c1"></div>
