--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c6">
-            <h4>If you’re looking to work with me or simply need boba tea recommendations, feel free to email me at <a href="mailto: znk4@cornell.edu?subject=Hey!">znk4@cornell.edu</a>.</h4>
+            <h4>If you’re looking to work with me or simply need boba tea recommendations, feel free to email me at <a href="mailto:znk4@cornell.edu?subject=Hey!" target="_blank">znk4@cornell.edu</a>.</h4>
         </div>
         <div class="c2"></div>
         <div class="c2">
