--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
         <div class="c5">
             <p>I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" style="color: #B31B1B">Cornell University</a> studying Information Science and most recently worked at <a href="https://arcadiamgroup.com/" target="_blank" style="color: #199F9F">Arcadia Media Group</a>, designing logos and online interactions for cryptocurrencies.<br><br>
 
-            I was born and raised in Dallas, TX, where I developed a strong interest in the way people interacted with products everyday.<br><br>
+            I was born and raised in Dallas, TX, where I developed a strong interest in the way people interact with products everyday.<br><br>
 
             If you’d like to chat (over some boba tea) or would like to challenge me to a <span style="text-decoration: line-through">competitive</span> friendly game of table tennis, <a href="http://m.me/zainkho7" target="_blank">let me know!</a></p>
         </div>
