--- a/nalp.html
+++ b/nalp.html
@@ -86,7 +86,7 @@
         <div class="c10">
             <h1 class="nalptitle title">
                 NALP.<br>
-                An Intro to Comm Design.
+                Intro Communication Design.
             </h1>
         </div>
         <div class="c1"></div>
