--- a/respond.html
+++ b/respond.html
@@ -131,7 +131,7 @@
             
             <h1 class="respondtitle">Research</h1>
             <p>
-                When looking at current methods used by first responders, we noticed there was a lack of proactive searching. The current processes relied on crowdsourced information and tips followed up by search-and-rescue missions. We saw that there was an opportunity for modern technologies to possibly help the situation.
+                Studying current methods used by first responders, we noticed there was a lack of proactive searching. The current processes relied on crowdsourced information and tips followed up by search-and-rescue missions. We saw that there was an opportunity for modern technologies to possibly help the situation.
             </p><br>
             
             <h1 class="respondtitle">Ideation</h1>
