--- a/tint.html
+++ b/tint.html
@@ -126,7 +126,7 @@
         <div class="c10 divider">
             <h1 class="tinttitle">Problem</h1>
             <p>
-                We see a lot of cool things everyday, but we don’t have the time to make a note of all the objects that pique our curiosity. What if an application could automatically organize and compile knowledge about these objects while we’re out and remind us when we get home?
+                We see a lot of cool things everyday, but we don’t have the time to make a note to search or learn more about these things. What if an application could automatically organize and compile knowledge about these objects while we’re out and remind us when we get home?
             </p><br>
 
             <h1 class="tinttitle">User Flow</h1>
