--- a/index.html
+++ b/index.html
@@ -59,6 +59,21 @@
       gtag('config', 'UA-89012104-2');
     </script>
 
+    <!-- Twitter Preview -->
+    <meta name="description" content="Zain Khoja is a student at Cornell and aspiring Product Designer."/>
+    <link rel="canonical" href="http://zainkho.com/" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Zain Khoja" />
+    <meta property="og:description" content="Zain Khoja is a student at Cornell and aspiring Product Designer." />
+    <meta property="og:url" content="http://zainkho.com/" />
+    <meta property="og:site_name" content="Zain Khoja" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:description" content="Zain Khoja is a student at Cornell and aspiring Product Designer." />
+    <meta name="twitter:title" content="Zain Khoja" />
+    <meta name="twitter:site" content="@zainkho" />
+    <meta name="twitter:creator" content="@zainkho" />
+    
 </head>
 
 <!-- WEBPAGE -->
