--- a/campmosaic.html
+++ b/campmosaic.html
@@ -59,6 +59,13 @@
       gtag('config', 'UA-89012104-2');
     </script>
 
+    <!-- Twitter Preview -->
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@zainkho"/>
+    <meta name="twitter:creator" content="@zainkho"/>
+    <meta property="og:url" content="http://zainkho.com"/>
+    <meta property="og:title" content="Zain Khoja" />
+    <meta property="og:description" content="Zain Khoja is a student at Cornell and aspiring Product Designer."/>
 </head>
 
 <!-- WEBPAGE -->
