--- a/earbud.html
+++ b/earbud.html
@@ -63,9 +63,9 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@zainkho"/>
     <meta name="twitter:creator" content="@zainkho"/>
-    <meta property="og:url" content="http://zainkho.com"/>
-    <meta property="og:title" content="Zain Khoja" />
-    <meta property="og:description" content="Zain Khoja is a student at Cornell and aspiring Product Designer."/>
+    <meta name="twitter:title" content="Zain Khoja" />
+    <meta name="twitter:description" content="Zain Khoja is a student at Cornell and aspiring Product Designer."/>
+    <meta name="twitter:image:src" content="https://zainkho.com/zklogo.png"/>
 </head>
 
 <!-- WEBPAGE -->
