--- a/respond.html
+++ b/respond.html
@@ -64,7 +64,7 @@
     <meta name="twitter:site" content="@zainkho"/>
     <meta name="twitter:creator" content="@zainkho"/>
     <meta name="twitter:title" content="Zain Khoja" />
-    <meta name="twitter:description" content="Zain Khoja is a student at Cornell and aspiring Product Designer."/>
+    <meta name="twitter:description" content="Zain Khoja is a student at Cornell and product designer."/>
     <meta name="twitter:image:src" content="https://zainkho.com/zklogo.png"/>
 </head>
 
