--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <meta name="twitter:creator" content="@zainkho"/>
     <meta name="twitter:title" content="Zain Khoja" />
     <meta name="twitter:description" content="Zain Khoja is a student at Cornell and aspiring product designer."/>
-    <meta name="twitter:image:src" content="https://zainkho.com/zklogo.png"/>
+    <meta name="twitter:image:src" content="https://zainkho.com/zkscreenshot.png"/>
 </head>
 
 <!-- WEBPAGE -->
