--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
     <div class="row content">
         <div class="c1"></div>
         <div class="c5">
-            <p>I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" style="color: #B31B1B">Cornell University</a> studying Information Science. Most recently, I worked at <a href="https://arcadiamgroup.com/" target="_blank" style="color: #199F9F">Arcadia Media Group</a>, designing logos and online interactions for cryptocurrencies.<br><br>
+            <p>I’m currently a student at <a href="https://www.cornell.edu/" target="_blank" style="color: #B31B1B">Cornell University</a> studying Information Science. Next summer, I'll be working at <a href="https://www.github.com/" target="_blank" style="color: #6E5494">GitHub</a> as a Systems Design Intern.<br><br>
 
             I was born and raised in Dallas, TX, where I developed a strong interest in the way people interact with products everyday.<br><br>
 
