--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="c10">
             <h1 class="title">
                 Student at <a href="https://www.cornell.edu/" target="_blank" style="color: #B31B1B">Cornell</a>.<br>
-                Systems Designer at <a href="https://www.github.com/" target="_blank" style="color: #6E5494">GitHub</a>.
+                <span style="font-size: 16px">(Incoming)</span> Design Intern at <a href="https://www.github.com/" target="_blank" style="color: #6E5494">GitHub</a>.
             </h1>
         </div>
         <div class="c1"></div>
