*new* mobile version
Better margins/padding on mobile.
Rewritten case studies.
Section headings.
More details on Respond and IDEO CoLab.
Reordering and refocusing on the things that matter.

--- a/about.html
+++ b/about.html
@@ -92,6 +92,7 @@
             <div class="optionList" style="float: right">
                 <h3 class="option"><a href="index.html">work</a></h3>
                 <h3 class="option selected">about</h3>
+                <h3 class="option"><a href="travel.html">travel</a></h3>
                 <h3 class="option"><a target="_blank" href="zainkhoresume.pdf">resume</a></h3>
             </div>    
         </div>
