--- a/designs.html
+++ b/designs.html
@@ -92,6 +92,7 @@
             <div class="optionList" style="float: right">
                 <h3 class="option"><a href="index.html">work</a></h3>
                 <h3 class="option"><a href="about.html">about</a></h3>
+                <h3 class="option"><a href="travel.html">travel</a></h3>
                 <h3 class="option"><a target="_blank" href="ZainKhoResume.pdf">resume</a></h3>
             </div>    
         </div>
