fun fun fun mobile blurb

--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
         <div class="c1"></div>
         <div class="c10">
             <h1 class="title">
-                <span class="content-mobile">Zain Khoja.</span>
-                Student at <a href="https://www.cornell.edu/" target="_blank" style="color: #B31B1B">Cornell</a>.<br>
-                <span class="content-web"><span style="font-size: 16px">(Incoming)</span> Design Intern at <a href="https://www.github.com/" target="_blank" style="color: #6E5494">GitHub</a>.</span>
+                <span class="content-mobile">Zain Khoja<span class="content-web">.</span></span>
+                
+                Student<span class="content-web"> </span><a href="https://www.cornell.edu/" target="_blank" style="color: #B31B1B">@Cornell</a><span class="content-web">.</span><br>
+                
+                <span class="content-web"><span style="font-size: 16px">(Incoming)</span> Design </span>Intern<span class="content-web"> </span><a href="https://www.github.com/" target="_blank" style="color: #6E5494">@GitHub</a><span class="content-web">.</span>
             </h1>
         </div>
         <div class="c1"></div>
