added links to most pages with more information/sources

--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
 
             I was born and raised in Dallas, TX, where I developed a strong interest in the way people interact with products everyday.<br><br>
 
-            If you’d like to chat (over some boba tea) or would like to challenge me to a <span style="text-decoration: line-through">competitive</span> friendly game of table tennis, <a href="http://m.me/zainkho7" target="_blank">let me know!</a></p>
+            If you’d like to chat (over some boba tea) or would like to challenge me to a friendly game of table tennis, <a href="http://m.me/zainkho7" target="_blank">let me know!</a></p>
         </div>
         <div class="c1"></div>
         <div class="c4">
