--- a/designs.html
+++ b/designs.html
@@ -145,8 +145,8 @@
             <div class="c6">
                 <img src="work/designs/stuco1.png" class="design">
                 <img src="work/designs/stuco2.png" class="design">
-                <div class="c6"><img src="work/designs/hope1.png" class="design"></div>
-                <div class="c6"><img src="work/designs/hope2.png" class="design"></div>
+                <div class="c6"><a href="https://www.tamshope.org/" target="_blank"><img src="work/designs/hope1.png" class="design"></a></div>
+                <div class="c6"><a href="https://www.tams.hope.org/" target="_blank"><img src="work/designs/hope2.png" class="design"></a></div>
                 <img src="work/designs/unt1.png" class="design">
                 <div class="c6"><img src="work/designs/tcs1.png" class="design"></div>
                 <div class="c6"><img src="work/designs/tcs2.png" class="design"></div>
