--- a/respond.html
+++ b/respond.html
@@ -195,7 +195,7 @@
             <h4 class="section">results & metrics</h4>
             <h1 class="respondtitle">At the end of the day...</h1>
             <p>
-                Within the hackathon environment, we weren’t able to test the application’s use in with real first responders. Furthermore, testing this app in a real situation would be highly unlikely. However, our application was able to separate out different situations and showcase those that needed the most urgent care for the user. The app was recognized by Microsoft’s Azure team and IBM’s Call for Code competition for creating unique solutions to natural disasters.
+                Within the hackathon environment, we weren’t able to test the application’s use in with real first responders. Furthermore, testing this app in a real situation would be highly unlikely. However, our application was able to separate out different situations and showcase those that needed the most urgent care for the user. The app was recognized by <a href="https://azure.microsoft.com/en-us/" target="_blank" class="respondlink">Microsoft’s Azure team</a> and <a href="https://developer.ibm.com/callforcode/"target="_blank" class="respondlink">IBM’s Call for Code competition</a> for creating unique solutions to natural disasters.
             </p><br>
         </div>
         <div class="c3"></div>
