--- a/tint.html
+++ b/tint.html
@@ -173,8 +173,8 @@
             </p><br>
             
             <h1 class="tinttitle">Further explorations</h1>
-            <p class="c6">
-                I produced a handful of more high-fidelity mockups to showcase scrolling behavior and search results.
+            <p class="c12">
+                This project was originally an intended design for the <a href="http://www.getclip.io/" target="_blank" class="tintlink">Y-Combinator Startup School project 'Clip'</a>. During the project, I produced a handful of more high-fidelity mockups to show scrolling and search results.
             </p>
             <img src="work/tint/explorationmockup.png" class="c12" id="screenshots">
         </div>
