Getting rid of .html after url

--- a/respond.html
+++ b/respond.html
@@ -1,4 +1,4 @@
-<!-- respond.html -->
+<!-- respond -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -85,14 +85,14 @@
     <div class="row">
         <div class="c1"></div>
         <div class="c10">
-            <a href="index.html">
+            <a href="index">
                 <img src="zklogo.png" class="zklogo"/>
                 <div id="name">Zain Khoja</div>
             </a>
             <div class="optionList" style="float: right">
-                <h3 class="option"><a href="index.html">work</a></h3>
-                <h3 class="option"><a href="about.html">about</a></h3>
-                <h3 class="option"><a href="travel.html">travel</a></h3>
+                <h3 class="option"><a href="index">work</a></h3>
+                <h3 class="option"><a href="about">about</a></h3>
+                <h3 class="option"><a href="travel">travel</a></h3>
                 <h3 class="option"><a target="_blank" href="zainkhoresume.pdf">resume</a></h3>
             </div>    
         </div>
@@ -208,7 +208,7 @@
         
     <!-- Back -->
     <div class="c1">
-        <a href="index.html" class="no-display" id="back"></a>
+        <a href="index" class="no-display" id="back"></a>
     </div>
 </body>
 
