--- a/html/about.html
+++ b/html/about.html
@@ -91,10 +91,10 @@
         <!-- Nav -->
         <div class="hero">
             <div class="header">
-                <a href="index.html"><img alt="Zain Khoja logo" src="../zk-logo.png" class="zk-logo"></a>
+                <a href="../index.html"><img alt="Zain Khoja logo" src="../zk-logo.png" class="zk-logo"></a>
                 <h3 class="medium content-web">Zain Khoja</h3>
                 <div class="nav">
-                    <h5 class="option"><a href="index.html">Work</a></h5>
+                    <h5 class="option"><a href="../index.html">Work</a></h5>
                     <h5 class="option selected">About</h5>
                     <h5 class="option"><a href="travel.html">Travel</a></h5>
                     <h5 class="option"><a href="resume.html">Resume</a></h5>
@@ -138,7 +138,7 @@
         </div>  
 
         <!-- Back -->
-        <a href="index.html" aria-label="back" class="content-web no-display back"></a>
+        <a href="../index.html" aria-label="back" class="content-web no-display back"></a>
         <!-- Forward -->
         <a href="travel.html" aria-label="forward" class="content-web no-display forward"></a>
         <!-- Scroll To Top -->
