Fix URLs and file extensions

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         <!-- Nav -->
         <div class="hero">
             <div class="header">
-                <a href="index.html"><img alt="Zain Khoja logo" src="zk-logo.png" class="zk-logo"></a>
+                <a href="/"><img alt="Zain Khoja logo" src="zk-logo.png" class="zk-logo"></a>
                 <h3 class="medium content-web">Zain Khoja</h3>
                 <div class="nav">
                     <h5 class="option selected">Work</h5>
-                    <h5 class="option"><a href="html/about.html">About</a></h5>
-                    <h5 class="option"><a href="html/travel.html">Travel</a></h5>
-                    <h5 class="option"><a href="html/resume.html">Resume</a></h5>
+                    <h5 class="option"><a href="about">About</a></h5>
+                    <h5 class="option"><a href="travel">Travel</a></h5>
+                    <h5 class="option"><a href="resume">Resume</a></h5>
                 </div>
             </div>
 
@@ -101,7 +101,7 @@
         <div class="c12 content">
             
             <!-- GitHub -->
-            <a href="html/github.html"><div class="hvr-float exp exp-github">
+            <a href="github"><div class="hvr-float exp exp-github">
                 <div class="exp-content">
                     <img alt="GitHub logo" src="work/github/github-logo.png" class="github-logo">
                     <h2 class="white">GitHub</h2>
@@ -110,12 +110,12 @@
             </div></a>
 
             <!-- Starbucks -->
-            <a href="html/starbucks.html"><div class="hvr-float exp exp-starbucks">
+            <a href="starbucks"><div class="hvr-float exp exp-starbucks">
                 <div class="exp-content">
                     <div class="starbucks-heat-container">
-                        <div class="starbucks-heat evaporate-1"></div>
-                        <div class="starbucks-heat evaporate-2"></div>
-                        <div class="starbucks-heat evaporate-3"></div>
+                        <div class="starbucks-heat evaporate"></div>
+                        <div class="starbucks-heat evaporate"></div>
+                        <div class="starbucks-heat evaporate"></div>
                     </div>
                     <img alt="coffee cup" src="work/starbucks/starbucks-logo.png" class="starbucks-logo">
                     <h2 class="white">Starbucks</h2>
@@ -124,7 +124,7 @@
             </div></a>
 
             <!-- IDEO -->
-            <a href="html/ideo.html"><div class="hvr-float exp exp-ideo">
+            <a href="ideo"><div class="hvr-float exp exp-ideo">
                 <div class="exp-content">
                     <div class="ideo-soundwaves-container">
                         <div class="hvr-bounce-in ideo-soundwaves ideo-soundwaves-1"></div>
@@ -159,7 +159,7 @@
             </div></a>
 
             <!-- Respond -->
-            <a href="html/respond.html"><div class="hvr-float exp exp-respond">
+            <a href="respond"><div class="hvr-float exp exp-respond">
                 <div class="exp-content">
                     <div class="respond-logo-container">
                         <img alt="iPhone outline" src="work/respond/respond-logo.png" class="hvr-float respond-logo">
@@ -172,7 +172,7 @@
             </div></a>
 
             <!-- Tint -->
-            <a href="html/tint.html"><div class="hvr-float exp exp-tint">
+            <a href="tint"><div class="hvr-float exp exp-tint">
                 <div class="exp-content">
                     <img alt="iPhone with photos" src="work/tint/tint-logo.png" class="tint-logo">
                     <h2 class="white">Tint</h2>
@@ -181,7 +181,7 @@
             </div></a>
 
             <!-- NALP -->
-            <a href="html/nalp.html"><div class="hvr-float exp exp-nalp">
+            <a href="nalp"><div class="hvr-float exp exp-nalp">
                 <div class="exp-content">
                     <img alt="United States flag" src="work/nalp/nalp-logo.png" class="nalp-logo">
                     <h2 class="white">NALP</h2>
