--- a/resume.html
+++ b/resume.html
@@ -13,11 +13,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- CSS Links -->
-    <link rel="stylesheet" href="../css/style.css" type="text/css">
-    <link rel="stylesheet" href="../css/hover-min.css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/hover-min.css">
 
     <!-- Javascript -->
-    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
     <script>  
         /* Back button appears on scroll */
         $(window).scroll(function(){
@@ -63,8 +63,8 @@
     </script>
 
     <!-- Webpage Icons -->
-    <link rel="icon" type="image/x-icon" href="../zk-favicon.ico"/>
-    <link rel="icon" type="image/png" href="../zk-logo.png"/>
+    <link rel="icon" type="image/x-icon" href="zk-favicon.ico"/>
+    <link rel="icon" type="image/png" href="zk-logo.png"/>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89012104-2"></script>
@@ -91,12 +91,12 @@
         <!-- Nav -->
         <div class="hero">
             <div class="header">
-                <a href="../index.html"><img alt="Zain Khoja logo" src="../zk-logo.png" class="zk-logo"></a>
+                <a href="/"><img alt="Zain Khoja logo" src="zk-logo.png" class="zk-logo"></a>
                 <h3 class="medium content-web">Zain Khoja</h3>
                 <div class="nav">
-                    <h5 class="option"><a href="../index.html">Work</a></h5>
-                    <h5 class="option"><a href="about.html">About</a></h5>
-                    <h5 class="option"><a href="travel.html">Travel</a></h5>
+                    <h5 class="option"><a href="/">Work</a></h5>
+                    <h5 class="option"><a href="about">About</a></h5>
+                    <h5 class="option"><a href="travel">Travel</a></h5>
                     <h5 class="option selected">Resume</h5>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                 <div>
                     <h1 class="content-mobile">💼</h1>
                     <h1>Resume.<br>
-                    <span class="medium">Or download it <a href="../zainkhoresume.pdf" aria-label="Zain Khoja resume" target="_blank" rel="noopener" class="link" style="border-bottom: 0.075em solid var(--black)">here</a> if you like.</span></h1>
+                    <span class="medium">Or download it <a href="zainkhoresume.pdf" aria-label="Zain Khoja resume" target="_blank" rel="noopener" class="link" style="border-bottom: 0.075em solid var(--black)">here</a> if you like.</span></h1>
                 </div>
             </div>
         </div>
@@ -228,15 +228,15 @@
             <p>If you’re looking to work with me or want to grab some coffee, feel free to email me at <a href="mailto:znk4@cornell.edu?subject=Hey!" target="_blank" rel="noopener">znk4@cornell.edu</a>.</p>
         </div>
         <div class="social">
-            <a href="https://twitter.com/zainkho" target="_blank" rel="noopener"><img alt="Twitter icon" src="../icons/twitter.png" class="icons"></a>
-            <a href="https://medium.com/@zainkho" target="_blank" rel="noopener"><img alt="Medium icon" src="../icons/medium.png" class="icons"></a>
-            <a href="https://linkedin.com/in/zainkho" target="_blank" rel="noopener"><img alt="LinkedIn icon" src="../icons/linkedin.png" class="icons"></a>
+            <a href="https://twitter.com/zainkho" target="_blank" rel="noopener"><img alt="Twitter icon" src="icons/twitter.png" class="icons"></a>
+            <a href="https://medium.com/@zainkho" target="_blank" rel="noopener"><img alt="Medium icon" src="icons/medium.png" class="icons"></a>
+            <a href="https://linkedin.com/in/zainkho" target="_blank" rel="noopener"><img alt="LinkedIn icon" src="icons/linkedin.png" class="icons"></a>
         </div>  
         
         <!-- Back -->
-        <a href="../index.html" aria-label="back" class="content-web no-display back"></a>
+        <a href="/" aria-label="back" class="content-web no-display back"></a>
         <!-- Forward -->
-        <a href="github.html" aria-label="forward" class="content-web no-display forward"></a>
+        <a href="github" aria-label="forward" class="content-web no-display forward"></a>
         <!-- Scroll To Top -->
         <a href="#top" aria-label="scroll to top" class="content-web no-display scroll-to-top"></a>
     </footer>
