Update travel with pics from SF

--- a/github.html
+++ b/github.html
@@ -165,7 +165,7 @@
                 </p>
                 <br><br>
                 <p>
-                    During the course of my internship, I worked on several projects in progress as well as see a couple projects to completion. Because of GitHub’s great open source culture, I’m happy that I can share some of these projects so soon.
+                    During the course of my internship, I worked on several projects in progress as well as saw a couple projects to completion. Because of GitHub’s great open source culture, I’m happy that I can share some of these projects so soon.
                 </p>
             </div>
             
@@ -181,7 +181,7 @@
                 </p>
                 <br><br>    
                 <p>
-                    On the other hand, low fidelity prototypes excelled at letting designers think about features at the highest level without being bound by details. However, moving from low fidelity tools like sticky notes to interactive prototypes was difficult and difficult to recognize at GitHub UI. This made conveying ideas to develoeprs much more difficult.
+                    On the other hand, low fidelity prototypes excelled at letting designers think about features at the highest level without being bound by details. However, moving from low fidelity tools like sticky notes to interactive prototypes was difficult since these sticky notes didn’t correlate to GitHub UI. This made developer handoff much more difficult.
                 </p>
             </div>
             
@@ -230,7 +230,7 @@
                 <h5 class="subtitle">Results & Metrics</h5>
                 <h2 class="github-title">See it yourself</h2>
                 <p>
-                    The prototyping pages were a great experience in learning the workflow and asynchronous communication used within GitHub’s design team. You can check out the file for yourself below.
+                    The prototyping pages were a great experience in learning the workflow and asynchronous communication used within GitHub’s design team. You can check out the file below:
                 </p>
 
                 <iframe title="GitHub Prototyping Pages" class="img" style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FbOU0fFoN9dnVUpvEzbTqRP%2Fprototyping-pages%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
