--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h1 class="content-mobile">🖋️</h1>
                     <h1>Yo, I'm Zain.</h1>
                     <h1 class="medium">
-                        Student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a>, design at <a href="https://www.github.com/" target="_blank" rel="noopener" class="link github-link">GitHub</a>.
+                        Student at <a href="https://www.cornell.edu/" target="_blank" rel="noopener" class="link cornell-link">Cornell</a>, designer at <a href="https://www.github.com/" target="_blank" rel="noopener" class="link github-link">GitHub</a>.
                     </h1>
                 </div>
             </div>
