--- a/travel.html
+++ b/travel.html
@@ -237,6 +237,15 @@
                 </div>
             </div>
             
+            <!-- San Francisco -->
+            <div class="city">
+                <h2 class="travel-sf">San Francisco, <span class="medium">California</span></h2>
+                <div class="scroll">
+                    <img alt="San Francisco, California" src="work/travel/sf1.jpg" class="photo">
+                    <img alt="Japanese Tea Garden, San Francisco, California" src="work/travel/sf2.jpg" class="photo">
+                </div>
+            </div>
+            
             <!-- Sendai -->
             <div class="city">
                 <h2 class="travel-sendai">Sendai, <span class="medium">Miyagi, Japan</span></h2>
