--- a/resume.html
+++ b/resume.html
@@ -140,7 +140,7 @@
                 <p class="medium">Research Assistant · Aug 2017 to May 2018</p>
                 <br>
                 <p> 
-                    Analyzed data from 52 participants to further explore the concept of presence in virtual reality. Co-authored paper in the Engineering Reality of Virtual Reality conference 2018. Read more at <a href="https://bit.ly/xREZVR" aria-label="From Being There To Feeling Real: The Effect Of Real World Expertise On Presence In Virtual Environments" target="_blank" rel="noopener" class="link" style="border-bottom: 0.075em solid var(--black)">here</a>. 
+                    Analyzed data from 52 participants to further explore the concept of presence in virtual reality. Co-authored paper in the Engineering Reality of Virtual Reality conference 2018. Read more at <a href="https://bit.ly/xREZVR" aria-label="From Being There To Feeling Real: The Effect Of Real World Expertise On Presence In Virtual Environments" target="_blank" rel="noopener" class="link">https://bit.ly/xREZVR</a>. 
                 </p>
             </div>
             
